# bais6140project

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
assets/: style.css
docs/: final_writeup.md  project_proposal.md  project_update_1.md  project_update_2.md
src/: read_data.py  visualizations.py
