[tool.poetry]
name = "bais6140project"
version = "0.1.0"
description = "BAIS 6140 Visualization Project"
authors = ["Eric Trautsch <eric-trautsch@uiowa.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.14.2"
plotly = "^5.18.0"
pandas = "^2.1.3"
dash-bootstrap-components = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
